Avoid the download widget from jumping vertically, pushing possible content below. Makes things a lot slower even without the animations.

--- a/www/inc/style.css
+++ b/www/inc/style.css
@@ -375,6 +375,11 @@ div.pageheading > div {
 /*
  * Downloads Distro Buttons
  */
+
+.download-widget {
+  min-height: 35em;
+  overflow: hidden;
+}
  
 .distro-list div.distro-button {
     display: block;
